--- a/app/src/main/res/layout-land/activity_tears.xml
+++ b/app/src/main/res/layout-land/activity_tears.xml
@@ -57,7 +57,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal|fill_horizontal|left|center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:id="@+id/tourNumber"
@@ -70,8 +71,9 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="117dp"
-                android:orientation="horizontal">
+                android:layout_height="42dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
 
                 <TextView
                     android:id="@+id/easyRessource"
@@ -111,7 +113,50 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="86dp"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/heroRessource"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/almendra_sc"
+                    android:text="Hero"
+                    android:textAlignment="center"
+                    android:textColor="#9C27B0"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/epicRessource"
+                    android:layout_width="86dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/almendra_sc"
+                    android:text="Epic"
+                    android:textAlignment="center"
+                    android:textColor="#9C27B0"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/kingRessource"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/almendra_sc"
+                    android:text="King"
+                    android:textAlignment="center"
+                    android:textColor="#673AB7"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="71dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal|fill_horizontal"
                 android:orientation="vertical">
 
@@ -145,7 +190,8 @@
                 android:backgroundTint="#000000"
                 android:foreground="@drawable/ic_baseline_settings_backup_restore_24"
                 android:textColor="#000000"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:layout_marginTop="10dp"/>
 
         </LinearLayout>
 
