--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -7,9 +7,8 @@
     tools:context=".Home">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,15 +17,16 @@
 
         <ImageView
             android:id="@+id/tearsToManyMothers"
-            android:layout_width="550dp"
-            android:layout_height="113dp"
+            android:layout_width="380dp"
+            android:layout_height="160dp"
+            android:layout_margin="15dp"
             app:srcCompat="@drawable/tearstomanymothers" />
 
         <ImageView
             android:id="@+id/greatWesternTrail"
-            android:layout_width="576dp"
-            android:layout_height="127dp"
-            android:padding="5dp"
+            android:layout_width="380dp"
+            android:layout_height="160dp"
+            android:layout_margin="15dp"
             app:srcCompat="@drawable/gwt" />
     </LinearLayout>
 
