--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,9 +10,10 @@
         android:id="@+id/tearsToManyMothers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:scaleType="fitCenter"
         android:scaleX="0.9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/tearstomanymothers" />
 
@@ -20,10 +21,12 @@
         android:id="@+id/greatWesternTrail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:padding="5dp"
         android:scaleType="fitCenter"
         android:scaleX="0.9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tearsToManyMothers"
         app:srcCompat="@drawable/gwt" />
 
