--- a/app/src/main/res/layout/activity_great_western_trail.xml
+++ b/app/src/main/res/layout/activity_great_western_trail.xml
@@ -10,12 +10,14 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:contentDescription="@string/front_deco"
+        app:layout_constraintBottom_toTopOf="@+id/cardsLeftBlock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/face50"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/face50" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
@@ -59,7 +61,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:baselineAligned="false"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
@@ -67,38 +68,34 @@
             tools:layout_editor_absoluteY="327dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="vertical"
                 tools:layout_editor_absoluteX="69dp"
                 tools:layout_editor_absoluteY="327dp">
 
                 <Button
                     android:id="@+id/easyMode"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="15dp"
-                    android:layout_weight="2"
                     android:background="#4CAF50"
                     android:text="Easy" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:orientation="vertical"
                 tools:layout_editor_absoluteX="197dp"
                 tools:layout_editor_absoluteY="327dp">
 
                 <Button
                     android:id="@+id/hardMode"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="15dp"
-                    android:layout_weight="2"
                     android:background="#D33535"
                     android:text="Hard" />
 
@@ -188,7 +185,7 @@
         android:id="@+id/cardsLeftBlock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="visible"
